samples/_failures_safe/1761073894_cd6b12_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d8b3b02b.c:158:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  158 | void parser_advance
      | ^~~~
